appId: com.example.dudarims
---
- launchApp:
    clearState: true
- tapOn: "Įkelti nuotrauką"
- tapOn:
    point: "17%,94%"
- tapOn: "Done"
- assertVisible: "Labiausiai panašus ratlankis"
